webpack 一些配置实验

--- a/scss-guide/docs/语法说明.md
+++ b/scss-guide/docs/语法说明.md
@@ -2,7 +2,7 @@
 
 ## 参照指导
 
-> [SCSS快速入门](https://juejin.im/post/5cf488ea518825378867758f#heading-3)
+> [SCSS 快速入门](https://juejin.im/post/5cf488ea518825378867758f#heading-3)
 
 ## 定义变量
 
@@ -53,4 +53,21 @@
   }
   ```
 
-## 导入SCSS文件
+## 导入 SCSS 文件
+
+- css 提供了`@import`命令在 css 内部引入另一个 css 文件，浏览器只有在执行到`@import`语句后才会去加载对应的 css 文件，导致页面性能变差，故基本不使用.
+
+- 导入变量的优先级问题-变量默认值\*\*
+
+  - 导入的文件`App2.scss`只在文件中不存在`$border-color`时起作用，若`App1.scss`中已经存在了`$border-color`变量，则`App2.scss`中的`$border-color`不生效。
+  - `!default`只能使用与变量中
+
+- **嵌套导入**
+
+- **用原生`@import`**
+
+## 注释
+
+- SCSS 中的注释有两种
+- `/*注释*/`:这种注释会被保留到编译后的 css 文件中。
+- `//注释`:这种注释不会被保留到编译后生成的 css 文件中。
