使用混合函数

--- a/scss-guide/docs/语法说明.md
+++ b/scss-guide/docs/语法说明.md
@@ -71,3 +71,15 @@
 - SCSS 中的注释有两种
 - `/*注释*/`:这种注释会被保留到编译后的 css 文件中。
 - `//注释`:这种注释不会被保留到编译后生成的 css 文件中。
+
+## 混合器（函数）
+
+- **声明函数**
+
+  - 函数传参数
+  - 设置混合器的默认值
+
+- **使用函数**
+
+  - 使用函数的关键字为`@include`
+  - 多个参数时，传参指定参数的名字，可以不用考虑传入的顺序
