--- a/scss-guide/docs/语法说明.md
+++ b/scss-guide/docs/语法说明.md
@@ -83,3 +83,42 @@
 
   - 使用函数的关键字为`@include`
   - 多个参数时，传参指定参数的名字，可以不用考虑传入的顺序
+
+## 继承
+
+- **定义被继承的样式**： `%`来定义
+
+  ```scss
+  %border-style {
+    border: 1px solid #aaa;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+  }
+  ```
+
+- **继承样式** 通过关键字`@extend` 即可完成继承。
+
+  ```scss
+  .container5 {
+    @extend %border-style;
+  }
+
+  .container6 {
+    @extend %border-style;
+    color: red;
+  }
+  ```
+
+## 其他
+
+### 操作符
+
+SCSS 提供了标准的算术运算符，例如`+、-、*、/、%`。
+
+```scss
+/*SCSS*/
+width: 600px / 960px * 100%;
+/*编译后的CSS*/
+width: 62.5%;
+```
